[gd_scene load_steps=25 format=2]

[ext_resource path="res://producto/scripts/Plataformas/Inventario.gd" type="Script" id=1]
[ext_resource path="res://producto/assets/img/UI/Inventario/top.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/UI/Inventario/bot.png" type="Texture" id=3]
[ext_resource path="res://producto/assets/fonts/AmberTastePro-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://producto/assets/fonts/CENTURY.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://producto/assets/img/UI/Inventario/jugar.png" type="Texture" id=6]
[ext_resource path="res://producto/assets/img/UI/Inventario/back.png" type="Texture" id=7]
[ext_resource path="res://producto/assets/img/UI/Inventario/discoItem.png" type="Texture" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform int byn = 0;

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	
	if (byn == 0)
	{
	    float luminance = dot(COLOR.rgb, vec3(0.33, 0.559, 0.001));
	    COLOR.rgb = vec3(luminance);
	}
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/byn = 0

[sub_resource type="DynamicFont" id=3]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 35
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 4
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0

[sub_resource type="StreamTexture" id=12]
load_path = "res://.import/Obj-Chest-Closed-24x24.png-2ebdd87850daa62af525558d2dc0d867.stex"

[sub_resource type="DynamicFont" id=13]
size = 20
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
extra_spacing_space = 5
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=14]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("bot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.267943, 0.176777 ),
"update": 0,
"values": [ Vector2( 0, 167 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("top:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.267943, 0.176777 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.258816, 0.0947322 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bot:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.258816, 0.098073 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Contenido:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.210224, 1.27456 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Contenido:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( -320, -162 ), Vector2( -320, -50 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("blanco y negro:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.277392, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../opacidad:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.277392, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("bot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 167 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("top:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.176777, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.0947322, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bot:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.098073, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Contenido:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.27456, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Contenido:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.189465, 1 ),
"update": 0,
"values": [ Vector2( -320, -100 ), Vector2( -320, -162 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("blanco y negro:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.277392, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../opacidad:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.277392, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Contenido:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 167 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("top:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("top:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("bot:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("blanco y negro:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../opacidad:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../opacidad:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.819608 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("blanco y negro:color")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Inventario" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opacidad" type="ColorRect" parent="."]
light_mask = 31
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blanco y negro" type="ColorRect" parent="Control"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -660.0
margin_top = -386.0
margin_right = 661.0
margin_bottom = 383.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bot" type="Sprite" parent="Control"]
position = Vector2( 0, 167 )
texture = ExtResource( 3 )

[node name="top" type="Sprite" parent="Control"]
position = Vector2( 0, -200 )
texture = ExtResource( 2 )

[node name="Contenido" type="Control" parent="Control"]
margin_left = -320.0
margin_top = -162.0
margin_right = -280.0
margin_bottom = -122.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Control" parent="Control/Contenido"]
margin_right = 434.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoDisco" type="Control" parent="Control/Contenido/Items"]
visible = false
margin_left = 425.839
margin_top = 12.1599
margin_right = 655.839
margin_bottom = 262.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoItem" type="Label" parent="Control/Contenido/Items/InfoDisco"]
margin_top = 45.0
margin_right = 230.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 4
text = "texto"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreItem" type="Label" parent="Control/Contenido/Items/InfoDisco"]
margin_right = 230.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "disco"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="TouchScreenButton" parent="Control/Contenido/Items/InfoDisco"]
position = Vector2( 26, 149.245 )
normal = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="Control/Contenido/Items"]
margin_top = 42.0
margin_right = 476.0
margin_bottom = 294.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Control/Contenido/Items/PanelContainer"]
margin_right = 476.0
margin_bottom = 252.0
custom_styles/cursor = SubResource( 6 )
custom_styles/selected_focus = SubResource( 7 )
custom_styles/bg_focus = SubResource( 8 )
custom_styles/cursor_unfocused = SubResource( 9 )
custom_styles/selected = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_constants/vseparation = 0
custom_constants/hseparation = 30
items = [ "", ExtResource( 8 ), true, "", ExtResource( 8 ), true, "", ExtResource( 8 ), true, "", ExtResource( 8 ), true, "", SubResource( 12 ), true, "", SubResource( 12 ), true, "", SubResource( 12 ), true, "", SubResource( 12 ), true ]
allow_reselect = true
max_columns = 4
same_column_width = true
fixed_icon_size = Vector2( 80, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coleccionables" type="Control" parent="Control/Contenido"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volver" type="TouchScreenButton" parent="Control/Contenido/Coleccionables"]
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )

[node name="Col4" type="Control" parent="Control/Contenido/Coleccionables"]
visible = false
margin_right = 664.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreItem" type="Label" parent="Control/Contenido/Coleccionables/Col4"]
margin_right = 664.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Coleccionable #4"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoItem" type="Label" parent="Control/Contenido/Coleccionables/Col4"]
margin_top = 50.0
margin_right = 664.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 4
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum eget nulla in viverra. Aliquam tempus elementum consectetur. Cras ac accumsan lorem. Quisque finibus iaculis arcu nec ullamcorper. Nunc ut consectetur nibh, nec sodales sem. Pellentesque accumsan nibh in enim semper pharetra. Proin sit amet ultricies dolor. Curabitur ultrices sagittis orci et tempor. Vivamus accumsan sagittis sapien nec cursus. Vivamus eget commodo sapien. "
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col3" type="Control" parent="Control/Contenido/Coleccionables"]
visible = false
margin_right = 664.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreItem" type="Label" parent="Control/Contenido/Coleccionables/Col3"]
margin_right = 664.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Coleccionable #3"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoItem" type="Label" parent="Control/Contenido/Coleccionables/Col3"]
margin_top = 50.0
margin_right = 664.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 4
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum eget nulla in viverra. Aliquam tempus elementum consectetur. Cras ac accumsan lorem. Quisque finibus iaculis arcu nec ullamcorper. Nunc ut consectetur nibh, nec sodales sem. Pellentesque accumsan nibh in enim semper pharetra. Proin sit amet ultricies dolor. Curabitur ultrices sagittis orci et tempor. Vivamus accumsan sagittis sapien nec cursus. Vivamus eget commodo sapien. "
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col2" type="Control" parent="Control/Contenido/Coleccionables"]
visible = false
margin_right = 664.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreItem" type="Label" parent="Control/Contenido/Coleccionables/Col2"]
margin_right = 664.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Coleccionable #2"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoItem" type="Label" parent="Control/Contenido/Coleccionables/Col2"]
margin_top = 50.0
margin_right = 664.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 4
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum eget nulla in viverra. Aliquam tempus elementum consectetur. Cras ac accumsan lorem. Quisque finibus iaculis arcu nec ullamcorper. Nunc ut consectetur nibh, nec sodales sem. Pellentesque accumsan nibh in enim semper pharetra. Proin sit amet ultricies dolor. Curabitur ultrices sagittis orci et tempor. Vivamus accumsan sagittis sapien nec cursus. Vivamus eget commodo sapien. "
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Col1" type="Control" parent="Control/Contenido/Coleccionables"]
visible = false
margin_right = 664.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreItem" type="Label" parent="Control/Contenido/Coleccionables/Col1"]
margin_right = 664.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Coleccionable #1"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextoItem" type="Label" parent="Control/Contenido/Coleccionables/Col1"]
margin_top = 50.0
margin_right = 664.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 4
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum eget nulla in viverra. Aliquam tempus elementum consectetur. Cras ac accumsan lorem. Quisque finibus iaculis arcu nec ullamcorper. Nunc ut consectetur nibh, nec sodales sem. Pellentesque accumsan nibh in enim semper pharetra. Proin sit amet ultricies dolor. Curabitur ultrices sagittis orci et tempor. Vivamus accumsan sagittis sapien nec cursus. Vivamus eget commodo sapien. "
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
anims/close = SubResource( 14 )
anims/open = SubResource( 15 )
anims/visible = SubResource( 16 )

[connection signal="pressed" from="Control/Contenido/Items/InfoDisco/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="item_selected" from="Control/Contenido/Items/PanelContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Control/Contenido/Coleccionables/volver" to="." method="_on_volver_pressed"]
[connection signal="animation_finished" from="Control/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
